# BSplinePOSE

./: CMakeLists.txt  README.md  main.cpp
Schweizer-Messer/sm_common/include/sm/: assert_macros.hpp
include/bsplines/: BSpline.hpp
sparse_block_matrix/include/sparse_block_matrix/: sparse_block_matrix.h
src/: BSpline.cpp  BSplinePose.cpp
